:bug: Stop form zooming on mobile

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -81,6 +81,7 @@ textarea {
 
 input,
 textarea {
+	font-size: 16px;
 	margin-bottom: 6px;
 	transition: border-color 0.2s ease;
 }
